# toggl-round

./: README.md  pyproject.toml  run.sh  time_entry_rounding.py
